# echoframe

./: .gitignore  README.md  env.example  pyproject.toml
.githook/: pre-commit
data/: models.json
docs/: NOTE_coding_style_state_2026-04-18.md  NOTE_embedding_loader_api_2026-04-24.md  NOTE_segment_feature_refactor_summary.md  NOTE_token_metadata_handoff_2026-04-20.md  PLAN_binary_echoframe_key_implementation.md  PLAN_binary_echoframe_key_implementation_restart.md  PLAN_binary_echoframe_key_schema.md  PLAN_embedding_retrieval.md  PLAN_lmdb_env_cache.md  PLAN_migration_feature_3.md  PLAN_migration_feature_4.md  PLAN_migration_feature_6.md  PLAN_migration_feature_7.md  PLAN_resilient_codebook_batch_indices.md  PLAN_segment_feature_embeddings_batch_integration.md  PLAN_segment_feature_refactor.md  PLAN_store_binding_for_typed_containers.md  PLAN_token_embeddings.md  approach.md  propose_agent_coding_check.md
echoframe/: __init__.py  batch_codebook_indices.py  batch_segment_features.py  codebooks.py  compaction.py  embeddings.py  index.py  key_helper.py  lmdb_helper.py  metadata.py  model_loader.py  model_registry.py  model_registry_loader.py  output_storage.py  segment_batch_validation.py  segment_features.py  store.py  struct_helper.py  typed_loaders.py  util_formatting.py  utils_segment_features.py
scripts/: check_style.py  segment_features_batch.py
tests/: __init__.py  helpers.py  test_codebook_indices.py  test_embeddings.py  test_embeddings_multikey.py  test_eviction.py  test_key_helper.py  test_metadata_refactor.py  test_model_loader.py  test_model_registry.py  test_model_registry_loader.py  test_public_api.py  test_segment_features.py  test_storage_runtime.py  test_store_compaction_resume.py  test_store_end_to_end.py  test_store_io.py  test_store_model_cache.py  (+3 more)
(+4 files in other folders)
