[build-system]
requires = ['setuptools>=69', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'echoframe'
version = '0.1.66'
description = 'Store hidden states, attention tensors, and codebooks on disk.'
readme = 'README.md'
requires-python = '>=3.10'
license = {file = 'LICENSE'}
dependencies = [
    'h5py>=3.0',
    'lmdb>=1.4',
]
authors = [
    {name = 'Martijn Bentum'},
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
]

[project.urls]
Homepage = 'https://github.com/martijnbentum/echoframe'
Repository = 'https://github.com/martijnbentum/echoframe'

[tool.setuptools.packages.find]
include = ['echoframe*']
