[build-system]
requires = ['setuptools>=69', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'echoframe'
version = '0.1.85'
description = 'Store hidden states, attention tensors, and codebooks on disk.'
readme = 'README.md'
requires-python = '>=3.12'
license = {file = 'LICENSE'}
dependencies = [
    'frame @ git+https://github.com/martijnbentum/frame.git',
    'h5py>=3.0',
    'lmdb>=1.4',
    'to-vector @ git+https://github.com/martijnbentum/to_vector.git',
]
authors = [
    {name = 'Martijn Bentum'},
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
]

[project.urls]
Homepage = 'https://github.com/martijnbentum/echoframe'
Repository = 'https://github.com/martijnbentum/echoframe'

[tool.setuptools.packages.find]
include = ['echoframe*']

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
